--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,7 @@
           {%- if site.search.provider -%}
             <li><button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button></li>
           {%- endif -%}
+          <li><button class="button button--secondary button--circle" onclick="toggleTheme()"><i class="fas fa-moon"></i></button></li>
         </ul>
       </nav>
       {%- endif -%}
