--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,9 @@
 ---
 layout: base
 ---
+<script>
+  {%- include scripts/page.js -%}
+</script>
 {%- assign _page_mode = page.mode | default: layout.mode | default: site.data.variables.default.page.mode -%}
 {%- assign _page_type = page.type | default: layout.type | default: site.data.variables.default.page.type -%}
 {%- assign _article_header_type = page.article_header.type | default: layout.article_header.type -%}
@@ -244,6 +247,7 @@ layout: base
 
 
 <script>
+  initThemeSwitch();
   {%- include scripts/lib/scroll-to.js -%}
   {%- include scripts/lib/affix.js -%}
   {%- include scripts/lib/toc.js -%}
@@ -251,7 +255,6 @@ layout: base
     {%- include scripts/lib/gallery.js -%}
     {%- include scripts/components/lightbox.js -%}
   {%- endif -%}
-  {%- include scripts/page.js -%}
 </script>
 
 {%- if page.sidebar -%}
