--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -5,13 +5,23 @@
   source0=site.mathjax_autoNumber source1=page.mathjax_autoNumber -%}
 {%- assign _mathjax_autoNumber = __return -%}
 
-<script type="text/x-mathjax-config">
-	var _config = { tex2jax: {
-		inlineMath: [['$','$'], ['\\(','\\)']]
-	}};
-	{%- if _mathjax_autoNumber == true -%}
-		_config.TeX = { equationNumbers: { autoNumber: "all" } };
-	{%- endif -%}
-	MathJax.Hub.Config(_config);
+<script>
+	MathJax = {
+		loader: {load: ['[tex]/physics']},
+		tex: {
+		    inlineMath: [['$', '$'], ['\\(', '\\)']],
+		    macros: {
+				ii: "\\mathrm{i}",
+				ee: "\\mathrm{e}",
+				pp: "\\partial"
+			},
+			packages: {'[+]': ['physics']}
+		}
+	};
+	// {%- if _mathjax_autoNumber == true -%}
+	// 	// _config.TeX = { equationNumbers: { autoNumber: "all" } };
+	// 	// _config.TeX.equationNumbers = { autoNumber: "all" };
+	// {%- endif -%}
+	// // MathJax.Hub.Config(_config);
 </script>
-<script type="text/javascript" src="{{ _sources.mathjax }}" async></script>
+<script id="MathJax-script" src="{{ _sources.mathjax }}" async></script>
