--- a/_sass/skins/_default-dark.scss
+++ b/_sass/skins/_default-dark.scss
@@ -8,10 +8,10 @@
 
 $dark: (
   // main colors
-  main-color-1:     #ff9500,
+  main-color-1:     #9d9be3,//#ff9500,
   text-color-1:     rgba(#fff, .8),
 
-  main-color-2:     #ff006a,
+  main-color-2:     #ff006a,//#ff006a,
   text-color-2:     rgba(#fff, .8),
 
   main-color-3:     #202020,
