--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -8,10 +8,10 @@
 
 $default: (
   // main colors
-  main-color-1:     #fc4d50,
+  main-color-1:     #fc4d50,//#fc4d50,
   text-color-1:     #fff,
 
-  main-color-2:     #fca24d,
+  main-color-2:     #fca24d,//#fca24d,
   text-color-2:     #fff,
 
   main-color-3:     #f2f2f2,
