--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -9,6 +9,7 @@
 	MathJax = {
 		loader: {load: ['[tex]/physics']},
 		tex: {
+			tags: 'ams',
 		    inlineMath: [['$', '$'], ['\\(', '\\)']],
 		    macros: {
 				ii: "\\mathrm{i}",
