--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,6 +1,6 @@
 $base: (
-  font-family:            (-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Microsoft YaHei"),
-  font-family-code:       (Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace),
+  font-family:            (-apple-system, BlinkMacSystemFont, "Segoe UI", "HarmonyOS Sans SC", "Helvetica Neue", "PingFang SC", "Microsoft YaHei", "Source Han Sans SC", "Noto Sans CJK SC", Helvetica, Arial, sans-serif),
+  font-family-code:       (Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace, "Fira Code", "HarmonyOS Sans SC", "PingFang SC", "Microsoft YaHei"),
 
   font-size-root:         16px,
   font-size-root-sm:      14px,
