--- a/_includes/pageview-providers/leancloud/home.html
+++ b/_includes/pageview-providers/leancloud/home.html
@@ -14,16 +14,18 @@
   </script>
   <script>
     window.Lazyload.js(['{{ _sources.jquery }}', '{{ _sources.leancloud_js_sdk}}'], function() {
-      var pageview = window.pageview(AV, {
-        appId:    '{{ _LEANCLOUD_APP_ID }}',
-        appKey:   '{{ _LEANCLOUD_APP_KEY }}',
-        appClass: '{{ _LEANCLOUD_APP_CLASS }}'
-      });
-      $('.js-pageview').each(function() {
-        var $this = $(this);
-        var key = $this.attr('data-page-key');
-        pageview.get(key, function(view) {
-          $this.attr('itemprop', 'userInteractionCount').attr('content', view).text(view);
+      $( function() {
+        var pageview = window.pageview(AV, {
+          appId:    '{{ _LEANCLOUD_APP_ID }}',
+          appKey:   '{{ _LEANCLOUD_APP_KEY }}',
+          appClass: '{{ _LEANCLOUD_APP_CLASS }}'
+        });
+        $('.js-pageview').each(function() {
+          var $this = $(this);
+          var key = $this.attr('data-page-key');
+          pageview.get(key, function(view) {
+            $this.attr('itemprop', 'userInteractionCount').attr('content', view).text(view);
+          });
         });
       });
     });
