Fix github auto build

--- a/_sass/common/classes/_grid.scss
+++ b/_sass/common/classes/_grid.scss
@@ -7,14 +7,6 @@ $grid-columns: 12;
   min-width: 0;
 }
 
-@function strip-unit($number) {
-  @if type-of($number) == 'number' and not unitless($number) {
-    @return $number / ($number * 0 + 1);
-  }
-
-  @return $number;
-}
-
 @mixin make-cell($columns) {
   @if $columns == "auto" {
     @include flex(1 1 0);
@@ -26,7 +18,7 @@ $grid-columns: 12;
     @include flex(1);
   } @else {
     @include flex(none);
-    width: percentage(strip-unit(calc($columns / $grid-columns)));
+    width: calc(($columns / $grid-columns) * 100%);
   }
 }
 
