Fix problem due to scss version

--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $base: (
   font-family:            (-apple-system, BlinkMacSystemFont, "Segoe UI", "HarmonyOS Sans SC", "Helvetica Neue", "PingFang SC", "Microsoft YaHei", "Source Han Sans SC", "Noto Sans CJK SC", Helvetica, Arial, sans-serif),
   font-family-code:       (Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace, "Fira Code", "HarmonyOS Sans SC", "PingFang SC", "Microsoft YaHei"),
@@ -114,16 +116,16 @@ $button-height-sm:        1.5rem;
 $button-height-xs:        1.2rem;
 
 $button: (
-  padding-y-xl:           calc(($button-height-xl - map-get($base, font-size-xl)) / 2),
-  padding-x-xl:           calc($button-height-xl / 3),
-  padding-y-lg:           calc(($button-height-lg - map-get($base, font-size-lg)) / 2),
-  padding-x-lg:           calc($button-height-lg / 3),
-  padding-y:              calc(($button-height - map-get($base, font-size)) / 2),
-  padding-x:              calc($button-height / 3),
-  padding-y-sm:           calc(($button-height-sm - map-get($base, font-size-sm)) / 2),
-  padding-x-sm:           calc($button-height-sm / 3),
-  padding-y-xs:           calc(($button-height-xs - map-get($base, font-size-xs)) / 2),
-  padding-x-xs:           calc($button-height-xs / 3),
+  padding-y-xl:           math.div(($button-height-xl - map-get($base, font-size-xl)), 2),
+  padding-x-xl:           math.div($button-height-xl, 3),
+  padding-y-lg:           math.div(($button-height-lg - map-get($base, font-size-lg)), 2),
+  padding-x-lg:           math.div($button-height-lg, 3),
+  padding-y:              math.div(($button-height - map-get($base, font-size)), 2),
+  padding-x:              math.div($button-height, 3),
+  padding-y-sm:           math.div(($button-height-sm - map-get($base, font-size-sm)), 2),
+  padding-x-sm:           math.div($button-height-sm, 3),
+  padding-y-xs:           math.div(($button-height-xs - map-get($base, font-size-xs)), 2),
+  padding-x-xs:           math.div($button-height-xs, 3),
 
   pill-radius:            6rem,
 
