--- a/_sass/common/components/_toc.scss
+++ b/_sass/common/components/_toc.scss
@@ -1,13 +1,15 @@
+@use "sass:math";
+
 ul.toc {
   display: block;
   margin: 0;
   @include css-var(color, "var(--text-color)");
   list-style-type: none;
   & > li {
-    margin: calc(map-get($spacers, 1) / 2) 0;
+    margin: math.div(map-get($spacers, 1), 2) 0;
     a { /* stylelint-disable-line selector-max-type */
       display: inline-block;
-      margin: calc(map-get($spacers, 1) / 4) 0;
+      margin: math.div(map-get($spacers, 1), 4) 0;
       text-decoration: none !important; /* stylelint-disable-line declaration-no-important */
     }
   }
