--- a/_sass/common/classes/_grid.scss
+++ b/_sass/common/classes/_grid.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $grid-columns: 12;
 
 .grid-container {
@@ -18,7 +20,7 @@ $grid-columns: 12;
     @include flex(1);
   } @else {
     @include flex(none);
-    width: calc(($columns / $grid-columns) * 100%);
+    width: percentage(math.div($columns, $grid-columns));
   }
 }
 
