--- a/_sass/components/_extensions.scss
+++ b/_sass/components/_extensions.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .extensions {
   margin: map-get($spacers, 3) 0;
   @extend .d-print-none;
@@ -18,16 +20,16 @@
 
 
 .extensions--video {
-  padding-top: calc((315 / 560) * 100%);
+  padding-top: percentage(math.div(315, 560));
 }
 
 .extensions--slide {
-  padding-top: calc((487 / 599) * 100%);
+  padding-top: percentage(math.div(487, 599));
 }
 
 .extensions--demo {
   min-height: 340px;
-  padding-top: calc((315 / 560) * 100%);
+  padding-top: percentage(math.div(315, 560));
 }
 
 .extensions--audio {
