Add two notes & Mathjax block overflow-x

--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -23,6 +23,17 @@ source0=site.mathjax_autoNumber source1=page.mathjax_autoNumber -%}
 			packages: { '[+]': ['physics'] }
 		},
 	};
+
+	MathJax.startup = {
+		ready() {
+			MathJax.startup.defaultReady();
+			MathJax.startup.promise.then(() => {
+				$('mjx-math[width="full"]').parent().wrap("<div class='mathjax-block'></div>");
+				// $('mjx-math:not([width])').parent().wrap("<span class='mathjax-inline'></span>");
+			});
+		}
+	};
+
 	// {%- if _mathjax_autoNumber == true -%}
 	// 	// _config.TeX = { equationNumbers: { autoNumber: "all" } };
 	// 	// _config.TeX.equationNumbers = { autoNumber: "all" };
@@ -30,3 +41,26 @@ source0=site.mathjax_autoNumber source1=page.mathjax_autoNumber -%}
 	// // MathJax.Hub.Config(_config);
 </script>
 <script id="MathJax-script" src="{{ _sources.mathjax }}" async></script>
+
+<style>
+	.mathjax-block {
+		max-width: 100%;
+		overflow-x: auto;
+		overflow-y: hidden;
+	}
+
+	/*
+	.mathjax-inline {
+		display: inline-flex;
+		overflow-x: auto;
+		overflow-y: hidden;
+		max-width: 100%;
+	} */
+
+	mjx-container {
+		min-width: 0 !important;
+		overflow-x: auto;
+		overflow-y: hidden;
+		max-width: 100%;
+	}
+</style>
