Add a timer tool

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,6 +39,7 @@
   "common/components/toc",
   "common/components/item",
   "common/components/swiper",
+  "common/components/form",
 
   "animate/fade-in",
   "animate/fade-in-down",
