Try to fix scss

--- a/_sass/common/components/_form.scss
+++ b/_sass/common/components/_form.scss
@@ -1,4 +1,4 @@
-.input {
+.my-input {
     font-weight: map-get($base, font-weight);
     line-height: map-get($base, line-height);
     background-color: transparent;
