Add one note & Add line margin for block mathjax

--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -47,6 +47,7 @@ source0=site.mathjax_autoNumber source1=page.mathjax_autoNumber -%}
 		max-width: 100%;
 		overflow-x: auto;
 		overflow-y: hidden;
+		margin: 0.5em 0;
 	}
 
 	/*
